# ascll_graphic

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
configs/: config.json  config_mirror.json  config_piramid.json  cub_config.json  sphere.json
objects/: 1poligon.json  1poligon_points.csv  1poligon_poligons.csv  conus.json  conus_points.csv  conus_poligons.csv  cub.json  cub_points.csv  cub_poligons.csv  piramid.json  piramid_points.csv  piramid_poligons.csv  plane.json  plane_points.csv  plane_poligons.csv  sphere.json  sphere_points.csv  sphere_poligons.csv
objects/object_generators/: conus_generator  conus_generator.cpp  shere_generator  shere_generator.cpp  sphere_points.csv  sphere_poligons.csv
src/: run_config.cpp
src/linear_field_operations/: CMakeLists.txt  linear_transform.cpp  linear_transform.h  point.cpp  point.h  vector.cpp  vector.h
src/render/: CMakeLists.txt  frame.cpp  frame.h  render.cpp  render.h  vector_2d.cpp  vector_2d.h
src/scene/: CMakeLists.txt  light_source.cpp  light_source.h  object.cpp  object.h  point_of_view.cpp  point_of_view.h  poligon.cpp  poligon.h
